Rewritten from scratch. ~2-4x speedup in complex use cases.

--- a/test/test_sync_children.html
+++ b/test/test_sync_children.html
@@ -4,12 +4,12 @@
   <head>
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test_velement_diff_attributes</title>
+    <title>test_vsync</title>
   </head>
 
   <body>
     <p id="text"></p>
-    <script type="application/dart" src="test_velement_diff_attributes.dart"></script>
+    <script type="application/dart" src="test_sync_children.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
