Move diff/patch library to separate package

--- a/test/test_sync_children.html
+++ b/test/test_sync_children.html
@@ -4,7 +4,7 @@
   <head>
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test_vsync</title>
+    <title>test_sync_children</title>
   </head>
 
   <body>
