--- a/test/test_update_map.html
+++ b/test/test_update_map.html
@@ -4,12 +4,13 @@
   <head>
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test_sync_children</title>
+    <title>test_update_map</title>
   </head>
-
-  <body>
+ 
+  <body>   
     <p id="text"></p>
-    <script type="application/dart" src="test_sync_children.dart"></script>
+    <script type="application/dart" src="test_update_map.dart"></script>
+    <!-- for this next line to work, your pubspec.yaml file must have a dependency on 'browser' -->
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
